# tickets

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  run_health_check.py  verify_setup.py
.github/workflows/: health-check.yml
src/: __init__.py  alert_manager.py  config.py  health_check.py  models.py  notifier.py  scheduler.py
src/dashboard/: app.py
src/dashboard/templates/: dashboard.html
src/scrapers/: __init__.py  base.py  stubhub.py  ticketmaster.py  viagogo.py
tests/: conftest.py  test_alert_manager.py  test_models.py  test_notifier.py  test_scrapers.py
